--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Server=(LocalDb)\\MSSQLLocalDB; Database=CoreDB; MultipleActiveResultSets=True;"
+  }
 }
